--- a/build.gradle
+++ b/build.gradle
@@ -22,14 +22,12 @@ repositories {
 }
 
 dependencies {
-	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
 	implementation group: 'org.qlrm', name: 'qlrm', version: '4.0.1'
 	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
-
-	// implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
